# serializer version: 1
# name: test_artefact_url
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "For more details, please check the <https://example.com/artifact|full scan result>."
      }
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_no_vulnerabilities
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows CRITICAL severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  No vulnerabilities found. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_reports[python-3.9-report.json]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_reports[ruby-3.4.6-report.json]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`ruby@sha256:1b282c003e9f5fd583aa3695692a4a8a4c4a51aec0ef95b009e9ca949f6f1662`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "ruby:3.4.6 (debian 13.1) - debian",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *openssl: Out-of-bounds read & write in RFC 3211 KEK Unwrap*\n   <https://avd.aquasec.com/nvd/cve-2025-9230|CVE-2025-9230>\n   Severity: MEDIUM\n   Package: libssl-dev\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Timing side-channel in SM2 algorithm on 64 bit ARM*\n   <https://avd.aquasec.com/nvd/cve-2025-9231|CVE-2025-9231>\n   Severity: MEDIUM\n   Package: libssl-dev\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Out-of-bounds read & write in RFC 3211 KEK Unwrap*\n   <https://avd.aquasec.com/nvd/cve-2025-9230|CVE-2025-9230>\n   Severity: MEDIUM\n   Package: libssl3t64\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Timing side-channel in SM2 algorithm on 64 bit ARM*\n   <https://avd.aquasec.com/nvd/cve-2025-9231|CVE-2025-9231>\n   Severity: MEDIUM\n   Package: libssl3t64\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *libtiff: Libtiff Write-What-Where*\n   <https://avd.aquasec.com/nvd/cve-2025-9900|CVE-2025-9900>\n   Severity: HIGH\n   Package: libtiff-dev\n   Installed Version: 4.7.0-3\n   Fixed Version: 4.7.0-3+deb13u1\n\n\u2022 *libtiff: Libtiff Write-What-Where*\n   <https://avd.aquasec.com/nvd/cve-2025-9900|CVE-2025-9900>\n   Severity: HIGH\n   Package: libtiff6\n   Installed Version: 4.7.0-3\n   Fixed Version: 4.7.0-3+deb13u1\n\n\u2022 *libtiff: Libtiff Write-What-Where*\n   <https://avd.aquasec.com/nvd/cve-2025-9900|CVE-2025-9900>\n   Severity: HIGH\n   Package: libtiffxx6\n   Installed Version: 4.7.0-3\n   Fixed Version: 4.7.0-3+deb13u1\n\n\u2022 *openssl: Out-of-bounds read & write in RFC 3211 KEK Unwrap*\n   <https://avd.aquasec.com/nvd/cve-2025-9230|CVE-2025-9230>\n   Severity: MEDIUM\n   Package: openssl\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Timing side-channel in SM2 algorithm on 64 bit ARM*\n   <https://avd.aquasec.com/nvd/cve-2025-9231|CVE-2025-9231>\n   Severity: MEDIUM\n   Package: openssl\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Out-of-bounds read & write in RFC 3211 KEK Unwrap*\n   <https://avd.aquasec.com/nvd/cve-2025-9230|CVE-2025-9230>\n   Severity: MEDIUM\n   Package: openssl-provider-legacy\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n\u2022 *openssl: Timing side-channel in SM2 algorithm on 64 bit ARM*\n   <https://avd.aquasec.com/nvd/cve-2025-9231|CVE-2025-9231>\n   Severity: MEDIUM\n   Package: openssl-provider-legacy\n   Installed Version: 3.5.1-1\n   Fixed Version: 3.5.1-1+deb13u1\n\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Ruby - gemspec",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *rexml: REXML denial of service*\n   <https://avd.aquasec.com/nvd/cve-2025-58767|CVE-2025-58767>\n   Severity: MEDIUM\n   Package: rexml\n   Installed Version: 3.4.0\n   Fixed Version: >= 3.4.2\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_severity[CRITICAL,HIGH]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_severity[CRITICAL]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_severity[HIGH]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_severity[LOW]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
# name: test_severity[MEDIUM]
  '''
  Message blocks:
  [
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "\ud83d\udee1\ufe0f test-image:latest Security Scan \ud83d\udee1\ufe0f",
        "emoji": true
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "This scan shows HIGH, CRITICAL, MEDIUM severity vulnerabilities found in the following image:\n\n`python@sha256:da5aee29682d12a6649f51c8d6f15b87deb3e6c524b923c41d0cb3304d07c913`\n"
      }
    },
    {
      "type": "divider"
    },
    {
      "type": "header",
      "text": {
        "type": "plain_text",
        "text": "Python - python-pkg",
        "emoji": true
      }
    },
    {
      "type": "section",
      "text": {
        "type": "mrkdwn",
        "text": "\u2022 *pip: Mercurial configuration injectable in repo revision when installing via pip*\n   <https://avd.aquasec.com/nvd/cve-2023-5752|CVE-2023-5752>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 23.3\n\n\u2022 *pip: pip missing checks on symbolic link extraction*\n   <https://avd.aquasec.com/nvd/cve-2025-8869|CVE-2025-8869>\n   Severity: MEDIUM\n   Package: pip\n   Installed Version: 23.0.1\n   Fixed Version: 25.3\n\n"
      }
    },
    {
      "type": "divider"
    }
  ]
  Dry run enabled. Skipping sending Slack message.
  Done.
  
  '''
# ---
